# AI-Agents-Projects-

./: README.md
Documentation QNA Agent/: .env-example  README.md  agent_service.py  main.py  pyproject.toml  requirements.txt
Github Intelligence Agents (Gemini 3.5 + Github MCP)/: .env-example  README.md  agent.py  app.py  pyproject.toml
Legal Document Review Assistant/: .env-example  README.md  agent.py  embed.py  main.py  requirements.txt  utils.py
Markdown Validator Agent/: pyproject.toml
Markdown Validator Agent/src/mardown_validator/: main.py
Markdown Validator Agent/src/mardown_validator/config/: agents.yaml  tasks.yaml
Markdown Validator Agents/src/mardown_validator/: crew.py
Markdown Validator Agents/src/mardown_validator/tools/: markdowntool.py
Multi_Agent_Coding_Assistant/: agent.py  app.py  pyproject.toml  requirements.txt
Startup_Analyst_Agent/: .env-example  README.md  agent.py  app.py  pyproject.toml
Stock Analysis Agents/: README.md  main.py  pyproject.toml
Stock Analysis Agents/config/: agents.yaml  tools.yaml
Stock Analysis Agents/tools/: calculator_tool.py  sec_tools.py
