[project]
name = "documentation-qna-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.12",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.4",
    "mcp-server-fetch>=2026.6.4",
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.1",
]
