[project]
name = "github-intelligence-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai-haystack>=4.4.1",
    "haystack-ai>=2.30.2",
    "mcp-haystack>=1.4.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
