[project]
name = "markdown-validator-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai>=1.15.0",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "markdown>=3.10.2",
    "pymarkdownlnt>=0.9.38",
    "python-dotenv>=1.2.2",
]
