[project]
name = "multi-agent-coding-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.2.0",
    "langchain-core>=1.4.8",
    "langchain-mistralai>=1.1.5",
    "python-dotenv>=1.2.2",
    "streamlit>=1.32.0",
]
