[project]
name = "stock-analysis-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai>=1.14.7",
    "crewai-tools>=1.14.7",
    "html2text>=2025.4.15",
    "langchain>=1.3.11",
    "ollama>=0.6.2",
    "python-dotenv>=1.2.2",
    "sec-api>=1.0.36",
]
